# nn

./: .gitattributes  Cargo.toml  README.md  params
examples/: digits-conv.rs  digits.rs  order.rs  reg.rs  seq.rs
examples/model/: params
model/: params
notes/: nn.tex
src/: data.rs  layer.rs  lib.rs  matrix.rs  model.rs  prelude.rs  reg.rs  util.rs
src/layers/: conv.rs  dense.rs  layer.rs  mod.rs  pool.rs  rnn.rs
