[package]
name = "nn"
version = "0.1.0"
edition = "2021"
exclude = ["./notes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
image = "0.23"

[profile.release]
debug = 1

